[package]
name = "day-1-puzzle-1"
version = "0.1.0"
authors = ["Javed Nissar <1396351+RestitutorOrbis@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "day-1-puzzle-1"
path = "main.rs"
